// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScrollView Tests ScrollView has scrollTo method, scroll to bottom button 1`] = `
{
  "Automation Tree": {
    "AutomationId": "scroll_to_bottom_button",
    "Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "text",
        "Name": "Scroll to bottom",
      },
    ],
    "ControlType": 50026,
    "HelpText": "",
    "IsEnabled": true,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "group",
    "Name": "",
  },
  "Visual Tree": {
    "Brush": {
      "Brush Type": "ColorBrush",
      "Color": "rgba(204, 204, 204, 255)",
    },
    "Children": [
      {
        "Children": [
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              102,
              19,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          402,
          5,
          0,
        ],
        "Opacity": 1,
        "Size": [
          102,
          19,
        ],
        "Visual Type": "SpriteVisual",
      },
    ],
    "Comment": "scroll_to_bottom_button",
    "Offset": [
      0,
      0,
      0,
    ],
    "Opacity": 1,
    "Size": [
      906,
      29,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`ScrollView Tests ScrollView has scrollTo method, scroll to end button 1`] = `
{
  "Automation Tree": {
    "AutomationId": "scroll_to_end_button",
    "Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "text",
        "Name": "Scroll to end",
      },
    ],
    "ControlType": 50026,
    "HelpText": "",
    "IsEnabled": true,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "group",
    "Name": "",
  },
  "Visual Tree": {
    "Brush": {
      "Brush Type": "ColorBrush",
      "Color": "rgba(204, 204, 204, 255)",
    },
    "Children": [
      {
        "Children": [
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              78,
              19,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          414,
          5,
          0,
        ],
        "Opacity": 1,
        "Size": [
          78,
          19,
        ],
        "Visual Type": "SpriteVisual",
      },
    ],
    "Comment": "scroll_to_end_button",
    "Offset": [
      0,
      0,
      0,
    ],
    "Opacity": 1,
    "Size": [
      906,
      29,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`ScrollView Tests ScrollView has scrollTo method, scroll to start button 1`] = `
{
  "Automation Tree": {
    "AutomationId": "scroll_to_start_button",
    "Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "text",
        "Name": "Scroll to start",
      },
    ],
    "ControlType": 50026,
    "HelpText": "",
    "IsEnabled": true,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "group",
    "Name": "",
  },
  "Visual Tree": {
    "Brush": {
      "Brush Type": "ColorBrush",
      "Color": "rgba(204, 204, 204, 255)",
    },
    "Children": [
      {
        "Children": [
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              82,
              20,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          412,
          5,
          0,
        ],
        "Opacity": 1,
        "Size": [
          82,
          20,
        ],
        "Visual Type": "SpriteVisual",
      },
    ],
    "Comment": "scroll_to_start_button",
    "Offset": [
      0,
      0,
      0,
    ],
    "Opacity": 1,
    "Size": [
      906,
      29,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`ScrollView Tests ScrollView has scrollTo method, scroll to top button 1`] = `
{
  "Automation Tree": {
    "AutomationId": "scroll_to_top_button",
    "Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "text",
        "Name": "Scroll to top",
      },
    ],
    "ControlType": 50026,
    "HelpText": "",
    "IsEnabled": true,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "group",
    "Name": "",
  },
  "Visual Tree": {
    "Brush": {
      "Brush Type": "ColorBrush",
      "Color": "rgba(204, 204, 204, 255)",
    },
    "Children": [
      {
        "Children": [
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              76,
              20,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          415,
          5,
          0,
        ],
        "Opacity": 1,
        "Size": [
          76,
          20,
        ],
        "Visual Type": "SpriteVisual",
      },
    ],
    "Comment": "scroll_to_top_button",
    "Offset": [
      0,
      0,
      0,
    ],
    "Opacity": 1,
    "Size": [
      906,
      29,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`ScrollView Tests ScrollViews has flash scroll indicators 1`] = `
{
  "Automation Tree": {
    "AutomationId": "flash_scroll_indicators_button",
    "Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "text",
        "Name": "Flash scroll indicators",
      },
    ],
    "ControlType": 50026,
    "HelpText": "",
    "IsEnabled": true,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "group",
    "Name": "",
  },
  "Visual Tree": {
    "Brush": {
      "Brush Type": "ColorBrush",
      "Color": "rgba(204, 204, 204, 255)",
    },
    "Children": [
      {
        "Children": [
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              132,
              20,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          387,
          5,
          0,
        ],
        "Opacity": 1,
        "Size": [
          132,
          20,
        ],
        "Visual Type": "SpriteVisual",
      },
    ],
    "Comment": "flash_scroll_indicators_button",
    "Offset": [
      0,
      0,
      0,
    ],
    "Opacity": 1,
    "Size": [
      906,
      28,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;
